--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,8 @@ version = "0.1.0"
 authors = ["Artileda <47468136+ywnn@users.noreply.github.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-telegram-bot = "0.7"
-tokio = { version = "1.2", features = ["fs", "rt"]}
-
-[dev-dependencies]
-tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
+teloxide = { version = "0.4", features = ["auto-send"] }
+log = "0.4.8"
+pretty_env_logger = "0.4.0"
+tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
